[package]
name = "web_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.11.0"
wasm-bindgen-futures = "0.4.30"
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.58"
features = [
    "Navigator",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "ImageBitmap",
    "DomRect"
]

